--- a/group-contract.qmd
+++ b/group-contract.qmd
@@ -1,9 +1,9 @@
 ---
 title: "SDS 192 Group Contract"
 author:
- - Author One
- - Author Two
- - Author Three
+ - Caitlyn Kim
+ - Annabelle Daniels
+ - Lily Schroeder
 date: "Last updated on `r Sys.Date()`"
 output: html_document
 ---
@@ -14,136 +14,136 @@ Working in groups can be both incredibly rewarding and incredibly challenging. T
 
 ## Who will be responsible for scheduling meetings and hosting Zoom calls? 
 
-FILL ME
+Lily
 
 ## Who will be responsible for facilitating discussion during team meetings?
 
-FILL ME 
+Together
 
 ## Who will be responsible for taking notes and recording decisions during meetings?
 
-FILL ME
+Annabelle
 
 ## Who will be responsible for emailing the professor with questions?
 
-FILL ME
+Caitlyn
 
 ## Who will be responsible for requesting group assignment extensions?
 
-FILL ME
+Annabelle
 
 ## Who will be responsible for setting deadlines for drafts? 
 
-FILL ME
+Lily
 
 ## Who will be responsible for checking in with team members when drafts are late?
 
-FILL ME
+Caitlyn
 
 ## Who will be responsible for reviewing all materials before submission?
 
-FILL ME
+All of us
 
 ## Who will be responsible for submitting assignments?
 
-FILL ME
+Lily but at a meeting
 
 
 # COLLABORATIVE WORKSPACES
 
 ## Where will the team keep meeting notes? 
 
-FILL ME
+Google Doc
 
 ## Where will the team store drafts of assignments? 
 
-FILL ME
+GitHub
 
 ## Through what channels will the team communicate when not meeting?
 
-FILL ME
+Through text
 
 ## What is the expected response time for emails and messages? 
 
-FILL ME
+Within a day
 
 
 # MEETINGS
 
 ## How often will the team meet? 
 
-FILL ME
+Weekly at least
 
 ## What days/times will the team meet?
 
-FILL ME
+Thursdays at 5
 
 ## How long will meetings be?
 
-FILL ME
+One hour or as long as needed
 
 ## How will you make decisions during meetings (e.g. consensus, a vote)?
 
-FILL ME
+Consensus
 		
 ## What strategies will you use to stay on task during meetings?
 
-FILL ME
+Keeping each other focused
 
 ## How should team members inform each other if they are going to be late to a meeting?
 
-FILL ME
+Through message
 			
 ## When is it ok for a team member to skip a meeting? How soon should they inform the group?
 
-FILL ME
+At least in advance and only if there's not reschedule possible
 
 ## What will you do if a group member is chronically absent from or late to meetings?
 
-FILL ME
+Get in contact with them
 
 ## What will you do if a group member is consistently not participating in meetings?
 
-FILL ME
+Check in with them, see if they need help
 
 ## What are your expectations for respectful engagement and communication during meetings and in collaborative workspaces? What will you do if a member of your team does not meet these expectations?
 
-FILL ME
+Being kind and respectful. Have honest conversations if people aren't meeting those standards.
 
 
 # ASSIGNMENTS
 
 ## How will you ensure that all team members fully understand assignment expectations? What will you do if your team is unsure how to complete an assignment?
 
-FILL ME
+Go through assignment together, go to office hours if we all don't know.
 
 ## How will you ensure that all team members are contributing equitably to assignments?
 
-FILL ME
+Break up the work before starting
 
 ## How soon in advance of deadlines do you expect all team members to share drafts of their work?
 
-FILL ME
+At least two days in advance
 
 ## What will be your process for reviewing each other’s work before submission?
 
-FILL ME
+Look over at team meetings
 
 ## What will you do if the quality of a team member’s work does not meet the group’s expectations? When is it permissible to revise another team member’s work?
 
-FILL ME
+Ask respectfully if you can suggest changes to their work.
 
 ## What are your expectations around punctuality regarding group deadlines? How should team members inform each other if they need an extension?
 
-FILL ME
+Let the team know at least a few days before, but otherwise extensions are ok.
 
 ## What will you do if a student is consistently late in submitting draft work?
 
-FILL ME
+Ask if they need help.
 
 ## What will you do if you discover that a team member’s work violates the Academic Code of Conduct?
 
-FILL ME
+Notify Lindsay.
 
 # SIGNATURES
 
@@ -151,13 +151,13 @@ FILL ME
 * I agree to abide by the terms and conditions outlined in this document.			
 * I understand that failing to abide by the terms and conditions outlined in this document may impact my grade.
  							
-Signature: FILL ME 
+Signature: Lily Schroeder 
 Date: `r format(Sys.time(), '%d %B, %Y')`
 
-Signature: FILL ME 
+Signature: Caitlyn Kim 
 Date: `r format(Sys.time(), '%d %B, %Y')`
 
-Signature: FILL ME
+Signature: Annabelle Daniels
 Date `r format(Sys.time(), '%d %B, %Y')`
 
 
