Got Atlanta plot to work

--- a/school_analysis.qmd
+++ b/school_analysis.qmd
@@ -79,15 +79,16 @@ schl_loc <- read.csv("Public_School_Locations_2021-22.csv")|>
   st_as_sf(coords = c("LON", "LAT"),
            crs = 4269) |>
   st_transform(crs = st_crs(4326)) |>
-  filter(STATE == "CA", CNTY == 6075)
+  filter(STATE == "GA", CNTY == 13121)
 
 schl_map <- leaflet(width = "100%") |>
-  setView(lat = 37.77, lng = -122.4, zoom = 10) |>
+  setView(lat = 33.8, lng = -84.39, zoom = 9.4) |>
   addProviderTiles("CartoDB.Positron") |>
   addCircleMarkers(data = schl_loc,
                    radius = 3,
                    stroke = FALSE,
                    fillOpacity = .5)
+schl_map
 
 ```
 
@@ -208,6 +209,79 @@ create_plot <- function(county){
 
 ```{r}
 #| include: false
+# Plot sandbox
+
+crdc_join_atl <-
+  crdc_join |>
+  filter(str_detect(as.character(COMBOKEY), "^1300026"))
+  
+atl_tot_enr_calc <-
+  crdc_join_atl |>
+  mutate(tot_hi_m = sum(SCH_ENR_HI_M),
+         tot_hi_f = sum(SCH_ENR_HI_F),
+         tot_am_m = sum(SCH_ENR_AM_M),
+         tot_am_f = sum(SCH_ENR_AM_F),
+         tot_as_m = sum(SCH_ENR_AS_M),
+         tot_as_f = sum(SCH_ENR_AS_F),
+         tot_bl_m = sum(SCH_ENR_BL_M),
+         tot_bl_f = sum(SCH_ENR_BL_F),
+         tot_hp_m = sum(SCH_ENR_HP_M),
+         tot_hp_f = sum(SCH_ENR_HP_F),
+         tot_wh_m = sum(SCH_ENR_WH_M),
+         tot_wh_f = sum(SCH_ENR_WH_F),
+         tot_tr_m = sum(SCH_ENR_TR_M),
+         tot_tr_f = sum(SCH_ENR_TR_F)) |>
+  select(-SCH_ENR_HI_M,
+         -SCH_ENR_HI_F,
+         -SCH_ENR_AM_M,
+         -SCH_ENR_AM_F,
+         -SCH_ENR_AS_M,
+         -SCH_ENR_AS_F,
+         -SCH_ENR_BL_M,
+         -SCH_ENR_BL_F,
+         -SCH_ENR_HP_M,
+         -SCH_ENR_HP_F,
+         -SCH_ENR_WH_M,
+         -SCH_ENR_WH_F,
+         -SCH_ENR_TR_M,
+         -SCH_ENR_TR_F)
+
+atl_tot_rst_calc <-
+  crdc_join_atl |>
+  group_by(RACE_RST_CHR, SEX_RST) |>
+  summarize(tot_racesex_rst = sum(RST_VALUES))
+
+
+
+atl_pct_join <-
+  left_join(atl_tot_enr_calc, atl_tot_rst_calc, by = c("RACE_RST_CHR", "SEX_RST")) |>
+  pivot_longer(cols = tot_hi_m:tot_tr_f,
+               names_to = "RACE_SEX_ENR",
+               values_to = "RACE_ENR") |>
+  mutate(RACE_SEX_ENR = str_to_upper(RACE_SEX_ENR))
+
+atl_pct_calc <-
+  atl_pct_join |>
+  mutate(pct_rst = case_when(str_ends(RACE_SEX_ENR, paste0("_", RACE_RST, "_", SEX_RST)) ~
+                     (tot_racesex_rst/RACE_ENR)*100,
+                   TRUE ~ NA)) |>
+  filter(!is.na(pct_rst))
+  
+atl_pct_calc |>  
+  ggplot(aes(x = RACE_RST_CHR, y = pct_rst, fill = SEX_RST)) +
+  geom_col(position = "dodge") +
+  coord_flip() +
+  theme_minimal() +
+  labs(title = paste("Percent of Students Mechanically Restrained", get_county_name(13121), "2021-2022"),
+       x = "Race",
+       y = "Percent Mechanically Restrained",
+       fill = "Gender")
+
+```
+
+
+```{r}
+#| include: false
 
 create_map <- function(county, race) {
   
@@ -279,16 +353,34 @@ crdc_enroll_total <- crdc_enroll_third_clean |>
   summarize(TOTAL_ENR = sum(ENROLLMENT))
 
 crdc_enroll_cleaned <- inner_join(crdc_enroll_third_clean, crdc_enroll_total, by = "COMBOKEY") |>
-  mutate(PCT_ENR = (ENROLLMENT/TOTAL_ENR)*100) |>
+  mutate(PCT_ENR_GEN_RACE = (ENROLLMENT/TOTAL_ENR)*100) |>
   filter(TYPE == "School")
 
 crdc_join <- crdc_metric_cleaned |>
-  left_join(crdc_enroll_cleaned, by = "COMBOKEY")
+  left_join(crdc_enroll, by = "COMBOKEY") |>
+  select(-starts_with("SCH_PSENR"),
+         -starts_with("TOT_PSENR")) |>
+  mutate(RACE_RST_am = str_replace(RACE_RST,"AM", "American Indian and Alaska Native"),
+         RACE_RST_bl = str_replace(RACE_RST_am, "BL", "Black or African American"),
+         RACE_RST_as = str_replace(RACE_RST_bl, "AS", "Asian"),
+         RACE_RST_hi = str_replace(RACE_RST_as, "HI", "Hispanic or Latino"),
+         RACE_RST_hp = str_replace(RACE_RST_hi, "HP", "Native Hawaiian and Other Pacific Islander"),
+         RACE_RST_tr = str_replace(RACE_RST_hp, "TR", "Two or more races"),
+         RACE_RST_CHR = str_replace(RACE_RST_tr, "WH", "White")) |>
+  select(-RACE_RST_am,
+         -RACE_RST_bl,
+         -RACE_RST_as,
+         -RACE_RST_hi,
+         -RACE_RST_hp,
+         -RACE_RST_tr) |>
+  filter(!is.na(RST_VALUES),
+         RACE_RST != "504",
+         RACE_RST != "LEP")
 
 crdc_join_onlyyes <- crdc_metric_cleaned_onlyyes |>
   left_join(crdc_enroll_cleaned, by = "COMBOKEY")
 
-crdc_race_gender_match <- crdc_join |>
+crdc_race_gender_match <- crdc_join_onlyyes |>
   filter(RACE_RST == RACE_ENR, SEX_RST == SEX_ENR)
 ```
 
