--- a/school_analysis.qmd
+++ b/school_analysis.qmd
@@ -338,80 +338,37 @@ race <- c('_HI_') #Race variables can be any of the following: _AM_, _AS_, _BL_,
 
 # SANDBOX. Before you moving code into your functions, I recommend that you use this space to test out pieces of what you need to accomplish (e.g. transforming the datasets, drafting the plot, initializing the map, etc. )
 
-crdc_metric_first_clean <- crdc_metric |>
+crdc_metric_clean <- crdc_metric |>
   pivot_longer(cols = starts_with("SCH_RS_NONIDEA_MECH"),
                names_to = "type",
-               values_to = "RST_VALUES")
-
-crdc_metric_second_clean <- crdc_metric_first_clean |>
+               values_to = "RST_VALUES") |>
   separate(col = type,
            into = c("SCH", "RS", "NONIDEA", "MECH", "RACE_RST", "SEX_RST"),
-           sep = "_")
-
-crdc_metric_third_clean <- crdc_metric_second_clean |>
+           sep = "_") |>
   mutate(JJ_RST = JJ) |>
   select(COMBOKEY, JJ_RST, RACE_RST, SEX_RST, RST_VALUES)
 
-crdc_metric_total <- crdc_metric_third_clean |>
-  filter(!is.na(RST_VALUES)) |>
-  group_by(COMBOKEY) |>
-  summarize(RST_TOT = sum(RST_VALUES))
-
-crdc_metric_cleaned <- crdc_metric_third_clean |>
-  left_join(crdc_metric_total, by = "COMBOKEY")
-
-crdc_metric_cleaned_onlyyes <- crdc_metric_cleaned |>
-  filter(RST_VALUES > 0)
-
-crdc_enroll_first_clean <- crdc_enroll |>
-  pivot_longer(cols = starts_with("SCH"),
-               names_to = "type",
-               values_to = "ENROLLMENT")
-
-crdc_enroll_second_clean <- crdc_enroll_first_clean |>
-  separate(col = type,
-           into = c("SCH", "PSorENR", "RACE_ENR", "SEX_ENR"),
-           sep = "_")
-
-crdc_enroll_third_clean <- crdc_enroll_second_clean |>
-  mutate(TYPE = case_when(PSorENR == "PSENR" ~ "Preschool",
-                          TRUE ~ "School"),
-         JJ_ENR = JJ) |>
-  select(COMBOKEY, JJ_ENR, TYPE, RACE_ENR, SEX_ENR, ENROLLMENT) |>
-  filter(!is.na(ENROLLMENT))
-
-crdc_enroll_total <- crdc_enroll_third_clean |>
-  group_by(COMBOKEY) |>
-  summarize(TOTAL_ENR = sum(ENROLLMENT))
-
-crdc_enroll_cleaned <- inner_join(crdc_enroll_third_clean, crdc_enroll_total, by = "COMBOKEY") |>
-  mutate(PCT_ENR = (ENROLLMENT/TOTAL_ENR)*100) |>
-  filter(TYPE == "School")
-
-crdc_join <- crdc_metric_cleaned |>
-  left_join(crdc_enroll_cleaned, by = "COMBOKEY")
-
-crdc_join_onlyyes <- crdc_metric_cleaned_onlyyes |>
-  left_join(crdc_enroll_cleaned, by = "COMBOKEY")
-
-crdc_race_gender_match <- crdc_join |>
-  filter(RACE_RST == RACE_ENR, SEX_RST == SEX_ENR)
+crdc_join <- crdc_metric_clean |>
+  left_join(crdc_enroll, by = "COMBOKEY") |>
+  select(-starts_with("SCH_PSENR"),
+         -starts_with("TOT_PSENR")) |>
+  mutate(RACE_RST_am = str_replace(RACE_RST,"AM", "American Indian and Alaska Native"),
+         RACE_RST_bl = str_replace(RACE_RST_am, "BL", "Black or African American"),
+         RACE_RST_as = str_replace(RACE_RST_bl, "AS", "Asian"),
+         RACE_RST_hi = str_replace(RACE_RST_as, "HI", "Hispanic or Latino"),
+         RACE_RST_hp = str_replace(RACE_RST_hi, "HP", "Native Hawaiian and Other Pacific Islander"),
+         RACE_RST_tr = str_replace(RACE_RST_hp, "TR", "Two or more races"),
+         RACE_RST_CHR = str_replace(RACE_RST_tr, "WH", "White")) |>
+  select(-RACE_RST_am,
+         -RACE_RST_bl,
+         -RACE_RST_as,
+         -RACE_RST_hi,
+         -RACE_RST_hp,
+         -RACE_RST_tr) |>
+  filter(!is.na(RST_VALUES),
+         RACE_RST != "504",
+         RACE_RST != "LEP")
 ```
-
-```{r}
-#| echo: false
-#| results: 'hide'
-
-rm(crdc_metric_first_clean,
-   crdc_metric_second_clean,
-   crdc_metric_third_clean,
-   crdc_metric_total,
-   crdc_enroll_first_clean,
-   crdc_enroll_second_clean,
-   crdc_enroll_third_clean,
-   crdc_enroll_total)
-```
-
 
 ```{r}
 #| echo: false
